fix popup login on mobile width

--- a/src/styles/components/login-popup.scss
+++ b/src/styles/components/login-popup.scss
@@ -9,6 +9,7 @@
     background-color: var(--white);
     box-shadow: var(--popup-shadow);
     border-radius: 8px;
+    z-index: 2;
 }
 
 .login-popup--opened {
@@ -49,4 +50,20 @@
 
 .login-popup__submit-btn {
     margin-top: 14px;
+}
+
+@media (max-width: 539px) {
+    .login-popup {
+        width: 100%;
+    }
+
+    .login-popup__title {
+        font-size: 24px;
+        line-height: 34px;
+    }
+
+    .login-popup__close-btn {
+        width: 34px;
+        height: 34px;
+    }
 }
